--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,7 @@
 body
 {
   margin: 2%;
+  background-color: #0d75ad;
 }
 
 h3
@@ -74,6 +75,20 @@ p.news
   float: left;
 }
 
+/* Content */
+
+div.content
+{
+  float: left;
+  padding: 24px;
+  border: medium solid;
+  border-color: Black;
+  border-radius: 12px;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+  background-color: White;
+}
+
 /* Download */
 
 div.download
@@ -83,6 +98,7 @@ div.download
   padding-left: 12px;
   padding-right: 12px;
   background-color: WhiteSmoke;
+  vertical-align: text-bottom;
 }
 
 img.download
