Screenshots need a bottom margin.

--- a/css/site.css
+++ b/css/site.css
@@ -35,6 +35,7 @@ div.screenshot
   background-color: #f9f9f9;
   border: thin solid #cccccc;
   margin-right: 12px;
+  margin-bottom: 12px;
   padding: 3px;
   font: 11px/1.4em Arial, sans-serif;
   float: left;
